# efr-maze-challenge

./: README.md  dijkstra.py  evaluate_solver.py  generate_level_1.py  main.py  maze_interface.py  pyproject.toml  requirements.txt  test.py
assets/level_1_mazes/: maze_1.txt  maze_2.txt  maze_3.txt
docs/: index.html
maze_challenge/: __init__.py  dijkstra.py  maze_interface.py  runners.py  solver.py
notebooks/: level_1.ipynb  level_2.ipynb
sim/usd-generator/: main.py  pyproject.toml
