[project]
name = "efr-maze-challenge"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.2.1",
    "labyrinth-py>=1.0.4",
    "matplotlib>=3.10.3",
    "tqdm>=4.67.1",
    "wcwidth>=0.2.13",
]


[dependency-groups]
dev = [
    "ipdb>=0.13.13",
]

[tool.uv.workspace]
members = ["sim/usd-generator"]
